tdf#144045 tdf#142484 Limit off-page positioning to textboxes

fix for the regression what has been introduced with
b6850bbe95418ecfde404be1696548f18d200c9b
(tdf#106153 sw compatibility: fix textboxes exceeding the page)

Basically that commit modifies the position all frames what
are off the page, not only the textboxes. This is now limited.
Futher regressions from the above mentioned commit were:
tdf#136613 and tdf#142484 and tdf#144045.
Now the tickets has been restored to the state before my
commit, (two of them still have problems, independent from me).
The 7351a5028b18591306dfe18b34f6c751e565766e will be reverted,
(tdf#136613 sw: fix picture position in tables) because
that was a hack, and unnecesary anymore.

Note: Unit test under development.

Change-Id: I50c913ec223122c09f5581a5ad4e9aab0442232a